--- a/layout-single-column.css
+++ b/layout-single-column.css
@@ -3159,11 +3159,6 @@ body.embed .entry .detailed-status {
   background-color: var(--color-thread-line);
 }
 
-/* Hide border-top from the last in thread */
-.layout-single-column div:has(.status--in-thread) + div .detailed-status {
-  border-top: 0;
-}
-
 /* Hide the "stub" from the first status line */
 div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.status--in-thread > .status__line.status__line--full,
 .layout-single-column .status-reply.status--in-thread.status--first-in-thread > .status__line,
